tests/fails/except_empty.stderr
error: unexpected end of input, expected literal
 --> $DIR/except_empty.rs:4:17
  |
4 |     let wrong = except!();
  |                 ^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
